interpreter/AniFrameParser.py
# Generated from AniFrameParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AniFrameParser ( Parser ):

    grammarFileName = "AniFrameParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'const'", "'if'", 
                     "'else'", "'else if'", "'for'", "'while'", "'repeat'", 
                     "'in'", "'to'", "'break'", "'func'", "'return'", "'returns'", 
                     "'FRAME'", "'set'", "'FRAME_RATE'", "'MAX_NUM_OF_FRAMES'", 
                     "'CANVAS_WIDTH'", "'CANVAS_HEIGHT'", "'CANVAS_BACKGROUND'", 
                     "'point'", "'line'", "'curve'", "'circle'", "'ellipse'", 
                     "'triangle'", "'rectangle'", "'quad'", "'polygon'", 
                     "'write'", "'move'", "'moveX'", "'moveY'", "'turn'", 
                     "'turnC'", "'turnCC'", "'shear'", "'shearX'", "'shearY'", 
                     "'resize'", "'resizeX'", "'resizeY'", "'fill'", "'stroke'", 
                     "'add'", "'remove'", "'rand_num'", "'rand_int'", "'sqrt'", 
                     "'sin'", "'cos'", "'tan'", "'asin'", "'acos'", "'atan'", 
                     "'atan2'", "'to_rad'", "'to_deg'", "'type'", "'info'", 
                     "'draw'", "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'^='", "'<='", "'>='", "'=='", "'!='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", "'<'", "'>'", 
                     "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
                     "'.'", "':'", "<INVALID>", "'Object'", "'Number'", 
                     "'Text'", "'Color'", "'Coord'", "'List'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "UNINDENT", "CONST", "IF", 
                      "ELSE", "ELSE_IF", "FOR", "WHILE", "REPEAT", "IN", 
                      "TO", "BREAK", "FUNCTION", "RETURN", "RETURNS", "FRAME", 
                      "SET", "FRAME_RATE", "NUM_FRAMES", "CANVAS_WIDTH", 
                      "CANVAS_HEIGHT", "CANVAS_BACKGROUND", "POINT", "LINE", 
                      "CURVE", "CIRCLE", "ELLIPSE", "TRIANGLE", "RECTANGLE", 
                      "QUADRILATERAL", "POLYGON", "WRITE", "MOVE", "MOVEX", 
                      "MOVEY", "TURN", "TURNC", "TURNCC", "SHEAR", "SHEARX", 
                      "SHEARY", "RESIZE", "RESIZEX", "RESIZEY", "FILL", 
                      "STROKE", "ADD", "REMOVE", "RAND_NUM", "RAND_INT", 
                      "SQRT", "SIN", "COS", "TAN", "ASIN", "ACOS", "ATAN", 
                      "ATAN2", "TO_RADIANS", "TO_DEGREES", "TYPE", "INFO", 
                      "DRAW", "AND_OP", "OR_OP", "PLUS_ASSIGN_OP", "MINUS_ASSIGN_OP", 
                      "TIMES_ASSIGN_OP", "DIVIDE_ASSIGN_OP", "MOD_ASSIGN_OP", 
                      "EXPONENT_ASSIGN_OP", "LESS_THAN_OR_EQUAL_OP", "GREATER_THAN_OR_EQUAL_OP", 
                      "EQUAL_OP", "NOT_EQUAL_OP", "PLUS_OP", "MINUS_OP", 
                      "TIMES_OP", "DIVIDE_OP", "MOD_OP", "EXPONENT_OP", 
                      "NOT_OP", "LESS_THAN_OP", "GREATER_THAN_OP", "ASSIGN_OP", 
                      "OPEN_PAREN_SYMBOL", "CLOSE_PAREN_SYMBOL", "OPEN_BRACKET_SYMBOL", 
                      "CLOSE_BRACKET_SYMBOL", "OPEN_BRACE_SYMBOL", "CLOSE_BRACE_SYMBOL", 
                      "COMMA_SYMBOL", "DOT_SYMBOL", "COLON_SYMBOL", "DATA_TYPE", 
                      "OBJECT_TYPE", "NUMBER_TYPE", "TEXT_TYPE", "COLOR_TYPE", 
                      "COORD_TYPE", "LIST_TYPE", "FLOAT_LITERAL", "INTEGER_LITERAL", 
                      "STRING_LITERAL", "IDENTIFIER", "COMMENT", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_start_ = 0
    RULE_simple_statement = 1
    RULE_compound_statement = 2
    RULE_draw_statement = 3
    RULE_expression = 4
    RULE_coordinates = 5
    RULE_list = 6
    RULE_member = 7
    RULE_function_call = 8
    RULE_actual_parameters = 9
    RULE_actual_parameter = 10
    RULE_positional_argument = 11
    RULE_keyword_argument = 12
    RULE_variable_declaration = 13
    RULE_assignment_statement = 14
    RULE_config_statement = 15
    RULE_flow_control_statement = 16
    RULE_return_statement = 17
    RULE_break_statement = 18
    RULE_conditional = 19
    RULE_if_statement = 20
    RULE_if_line = 21
    RULE_else_if_statement = 22
    RULE_else_if_line = 23
    RULE_else_statement = 24
    RULE_else_line = 25
    RULE_loop = 26
    RULE_for_loop = 27
    RULE_for_line = 28
    RULE_while_loop = 29
    RULE_while_line = 30
    RULE_repeat_loop = 31
    RULE_repeat_line = 32
    RULE_function_declaration_definition = 33
    RULE_function_declaration = 34
    RULE_formal_parameters = 35
    RULE_formal_parameter = 36
    RULE_return_value_data_types = 37
    RULE_return_value_data_type = 38
    RULE_function_name = 39
    RULE_conditional_block = 40
    RULE_conditional_with_break = 41
    RULE_if_statement_with_break = 42
    RULE_else_if_statement_with_break = 43
    RULE_else_statement_with_break = 44
    RULE_conditional_block_with_break = 45
    RULE_conditional_with_return = 46
    RULE_if_statement_with_return = 47
    RULE_else_if_statement_with_return = 48
    RULE_else_statement_with_return = 49
    RULE_conditional_block_with_return = 50
    RULE_conditional_with_break_return = 51
    RULE_if_statement_with_break_return = 52
    RULE_else_if_statement_with_break_return = 53
    RULE_else_statement_with_break_return = 54
    RULE_conditional_block_with_break_return = 55
    RULE_loop_block = 56
    RULE_loop_with_return = 57
    RULE_for_loop_with_return = 58
    RULE_while_loop_with_return = 59
    RULE_repeat_loop_with_return = 60
    RULE_loop_block_with_return = 61
    RULE_function_block = 62
    RULE_configurable = 63
    RULE_built_in_function = 64
    RULE_unary_operator = 65
    RULE_binary_logical_operator = 66
    RULE_relational_operator = 67
    RULE_assignment_operator = 68
    RULE_compound_assignment_operator = 69
    RULE_atom = 70
    RULE_literal = 71

    ruleNames =  [ "start_", "simple_statement", "compound_statement", "draw_statement", 
                   "expression", "coordinates", "list", "member", "function_call", 
                   "actual_parameters", "actual_parameter", "positional_argument", 
                   "keyword_argument", "variable_declaration", "assignment_statement", 
                   "config_statement", "flow_control_statement", "return_statement", 
                   "break_statement", "conditional", "if_statement", "if_line", 
                   "else_if_statement", "else_if_line", "else_statement", 
                   "else_line", "loop", "for_loop", "for_line", "while_loop", 
                   "while_line", "repeat_loop", "repeat_line", "function_declaration_definition", 
                   "function_declaration", "formal_parameters", "formal_parameter", 
                   "return_value_data_types", "return_value_data_type", 
                   "function_name", "conditional_block", "conditional_with_break", 
                   "if_statement_with_break", "else_if_statement_with_break", 
                   "else_statement_with_break", "conditional_block_with_break", 
                   "conditional_with_return", "if_statement_with_return", 
                   "else_if_statement_with_return", "else_statement_with_return", 
                   "conditional_block_with_return", "conditional_with_break_return", 
                   "if_statement_with_break_return", "else_if_statement_with_break_return", 
                   "else_statement_with_break_return", "conditional_block_with_break_return", 
                   "loop_block", "loop_with_return", "for_loop_with_return", 
                   "while_loop_with_return", "repeat_loop_with_return", 
                   "loop_block_with_return", "function_block", "configurable", 
                   "built_in_function", "unary_operator", "binary_logical_operator", 
                   "relational_operator", "assignment_operator", "compound_assignment_operator", 
                   "atom", "literal" ]

    EOF = Token.EOF
    INDENT=1
    UNINDENT=2
    CONST=3
    IF=4
    ELSE=5
    ELSE_IF=6
    FOR=7
    WHILE=8
    REPEAT=9
    IN=10
    TO=11
    BREAK=12
    FUNCTION=13
    RETURN=14
    RETURNS=15
    FRAME=16
    SET=17
    FRAME_RATE=18
    NUM_FRAMES=19
    CANVAS_WIDTH=20
    CANVAS_HEIGHT=21
    CANVAS_BACKGROUND=22
    POINT=23
    LINE=24
    CURVE=25
    CIRCLE=26
    ELLIPSE=27
    TRIANGLE=28
    RECTANGLE=29
    QUADRILATERAL=30
    POLYGON=31
    WRITE=32
    MOVE=33
    MOVEX=34
    MOVEY=35
    TURN=36
    TURNC=37
    TURNCC=38
    SHEAR=39
    SHEARX=40
    SHEARY=41
    RESIZE=42
    RESIZEX=43
    RESIZEY=44
    FILL=45
    STROKE=46
    ADD=47
    REMOVE=48
    RAND_NUM=49
    RAND_INT=50
    SQRT=51
    SIN=52
    COS=53
    TAN=54
    ASIN=55
    ACOS=56
    ATAN=57
    ATAN2=58
    TO_RADIANS=59
    TO_DEGREES=60
    TYPE=61
    INFO=62
    DRAW=63
    AND_OP=64
    OR_OP=65
    PLUS_ASSIGN_OP=66
    MINUS_ASSIGN_OP=67
    TIMES_ASSIGN_OP=68
    DIVIDE_ASSIGN_OP=69
    MOD_ASSIGN_OP=70
    EXPONENT_ASSIGN_OP=71
    LESS_THAN_OR_EQUAL_OP=72
    GREATER_THAN_OR_EQUAL_OP=73
    EQUAL_OP=74
    NOT_EQUAL_OP=75
    PLUS_OP=76
    MINUS_OP=77
    TIMES_OP=78
    DIVIDE_OP=79
    MOD_OP=80
    EXPONENT_OP=81
    NOT_OP=82
    LESS_THAN_OP=83
    GREATER_THAN_OP=84
    ASSIGN_OP=85
    OPEN_PAREN_SYMBOL=86
    CLOSE_PAREN_SYMBOL=87
    OPEN_BRACKET_SYMBOL=88
    CLOSE_BRACKET_SYMBOL=89
    OPEN_BRACE_SYMBOL=90
    CLOSE_BRACE_SYMBOL=91
    COMMA_SYMBOL=92
    DOT_SYMBOL=93
    COLON_SYMBOL=94
    DATA_TYPE=95
    OBJECT_TYPE=96
    NUMBER_TYPE=97
    TEXT_TYPE=98
    COLOR_TYPE=99
    COORD_TYPE=100
    LIST_TYPE=101
    FLOAT_LITERAL=102
    INTEGER_LITERAL=103
    STRING_LITERAL=104
    IDENTIFIER=105
    COMMENT=106
    WHITESPACE=107
    NEWLINE=108

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AniFrameParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AniFrameParser.NEWLINE)
            else:
                return self.getToken(AniFrameParser.NEWLINE, i)

        def config_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AniFrameParser.Config_statementContext)
            else:
                return self.getTypedRuleContext(AniFrameParser.Config_statementContext,i)


        def simple_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AniFrameParser.Simple_statementContext)
            else:
                return self.getTypedRuleContext(AniFrameParser.Simple_statementContext,i)


        def compound_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AniFrameParser.Compound_statementContext)
            else:
                return self.getTypedRuleContext(AniFrameParser.Compound_statementContext,i)


        def draw_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AniFrameParser.Draw_statementContext)
            else:
                return self.getTypedRuleContext(AniFrameParser.Draw_statementContext,i)


        def getRuleIndex(self):
            return AniFrameParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = AniFrameParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [108]:
                        self.state = 144
                        self.match(AniFrameParser.NEWLINE)
                        pass
                    elif token in [17]:
                        self.state = 145
                        self.config_statement()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 156
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 154
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [108]:
                        self.state = 151
                        self.match(AniFrameParser.NEWLINE)
                        pass
                    elif token in [3, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 105]:
                        self.state = 152
                        self.simple_statement()
                        pass
                    elif token in [4, 7, 8, 9, 13]:
                        self.state = 153
                        self.compound_statement()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==63 or _la==108:
                self.state = 161
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [108]:
                    self.state = 159
                    self.match(AniFrameParser.NEWLINE)
                    pass
                elif token in [63]:
                    self.state = 160
                    self.draw_statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(AniFrameParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(AniFrameParser.NEWLINE, 0)

        def function_call(self):
            return self.getTypedRuleContext(AniFrameParser.Function_callContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(AniFrameParser.Variable_declarationContext,0)


        def assignment_statement(self):
            return self.getTypedRuleContext(AniFrameParser.Assignment_statementContext,0)


        def IDENTIFIER(self):
            return self.getToken(AniFrameParser.IDENTIFIER, 0)

        def DOT_SYMBOL(self):
            return self.getToken(AniFrameParser.DOT_SYMBOL, 0)

        def getRuleIndex(self):
            return AniFrameParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_statement" ):
                return visitor.visitSimple_statement(self)
            else:
                return visitor.visitChildren(self)




    def simple_statement(self):

        localctx = AniFrameParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simple_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 170
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 168
                    self.match(AniFrameParser.IDENTIFIER)
                    self.state = 169
                    self.match(AniFrameParser.DOT_SYMBOL)


                self.state = 172
                self.function_call()
                pass

            elif la_ == 2:
                self.state = 173
                self.variable_declaration()
                pass

            elif la_ == 3:
                self.state = 174
                self.assignment_statement()
                pass


            self.state = 177
            self.match(AniFrameParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(AniFrameParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(AniFrameParser.LoopContext,0)


        def function_declaration_definition(self):
            return self.getTypedRuleContext(AniFrameParser.Function_declaration_definitionContext,0)


        def getRuleIndex(self):
            return AniFrameParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = AniFrameParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_compound_statement)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.conditional()
                pass
            elif token in [7, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.loop()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.function_declaration_definition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Draw_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(AniFrameParser.DRAW, 0)

        def OPEN_PAREN_SYMBOL(self):
            return self.getToken(AniFrameParser.OPEN_PAREN_SYMBOL, 0)

        def actual_parameter(self):
            return self.getTypedRuleContext(AniFrameParser.Actual_parameterContext,0)


        def CLOSE_PAREN_SYMBOL(self):
            return self.getToken(AniFrameParser.CLOSE_PAREN_SYMBOL, 0)

        def getRuleIndex(self):
            return AniFrameParser.RULE_draw_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDraw_statement" ):
                listener.enterDraw_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDraw_statement" ):
                listener.exitDraw_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDraw_statement" ):
                return visitor.visitDraw_statement(self)
            else:
                return visitor.visitChildren(self)




    def draw_statement(self):

        localctx = AniFrameParser.Draw_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_draw_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(AniFrameParser.DRAW)
            self.state = 185
            self.match(AniFrameParser.OPEN_PAREN_SYMBOL)
            self.state = 186
            self.actual_parameter()
            self.state = 187
            self.match(AniFrameParser.CLOSE_PAREN_SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

